--- a/data/ancestries/x1YinOddgUxwOLqP.htm
+++ b/data/ancestries/x1YinOddgUxwOLqP.htm
@@ -1,6 +1,6 @@
 Name: Shisk
-Nom: 
-État: aucune
+Nom: Shisl
+État: libre
 
 ------ Description (en) ------
 <p><em>Shisks are secretive mountain-dwellers, bone-feathered humanoids who lurk underground in dark tunnels and caverns. Their fascination with collecting and protecting esoteric knowledge is one of the few things that can persuade them to explore the outside world.</em></p>
@@ -31,3 +31,30 @@ Nom:
 <h3>Sample Names</h3>
 <p>Adomssha, Asjossa, Chishinsa, Dalissho, Lessia, Lishassha, Somissu, Quinshu</p>
 ------ Description (fr) ------
+</p><em>Les shisks sont des habitants des montagnes secrets, des humanoïdes à plumes d'os qui se cachent sous terre dans des tunnels et des cavernes sombres. Leur fascination pour la collecte et la protection de connaissances ésotériques est l'une des rares choses qui peuvent les persuader d'explorer le monde extérieur.</em></p>
+<hr />
+</p>Les shisks rencontrent rarement les autres peuples, même dans l'étendue du Mwangi. Les shisks subsistent grâce à des régimes hypocaloriques à base de légumes et d'insectes, ce qui les amène rarement à entrer en compétition avec d'autres pour obtenir des ressources ou à les échanger avec d'autres peuples. Leur société est très unie, méfiante envers les étrangers, bien qu'ils n'attaquent pas immédiatement les visiteurs. Leur histoire se transmet verbalement et musicalement, et ils conservent rarement des archives écrites pour préserver leur savoir. Souvent, la seule preuve de l'existence des shisks vient des explorateurs qui trouvent des signes de leur architecture : des bâtiments en adobe organiques et à faible impact, creusés dans les montagnes plutôt que construits au sommet de celles-ci.</p>
+<h2>Vous...</h2>
+<ul>
+<li>Vous considérez comme une partie de la nature et évitez de prendre ce dont vous n'avez pas besoin.</li>
+<li>Vous méfiez de ceux qui prennent le dessus sur vous en vous incitant à révéler quelque chose.</li>
+<li>Aimez la chaleur et appréciez les bains de soleil malgré votre nature souterraine.</li>
+</ul>
+<h2>Les autres...</h2>
+<ul>
+<li>Sont préoccupés par votre régime alimentaire et le peu que vous mangez.</li>
+<li>Sont confus ou agacés par votre refus de donner des informations librement.</li>
+<li>Apprécient votre incroyable mémoire et vos connaissances.</li>
+</ul>
+<h2>Description physique</h2>
+<p>Les shisks ont des traits et des teintes de peau similaires à ceux des humains, allant généralement du bronzage profond au noir profond. Ils sont plus légers que ce que leur taille pourrait indiquer, en raison de leurs os creux. Les shisks n'ont pas de poils sur le corps, mais leur dos est couvert d'un plumage vestigial qui ne pousse plus que sous forme de piquants osseux ressemblant à des plumes calcifiées. Bien que les shisks ne puissent pas voler, ces piquants sont plus longs autour de leurs bras, comme s'ils avaient autrefois eu des ailes. Les yeux du shisk se contractent en fentes à la lumière du soleil et ont généralement une couleur chaude, allant du noisette et du brun à des couleurs plus uniques comme le rouge ou l'ambre. Les shisks ont deux crocs étroits proéminents comme dents de devant sur leur mâchoire supérieure, ce qui amène certaines personnes à les confondre avec des asanbosams ou des vampires.</p>
+<h2>Société</h2>
+<p>Bien que rarement rencontrés, les shisks sont disposés à parler, à accueillir et à commercer avec les étrangers. Leur économie peut être déroutante pour les autres : ils évitent grandement le matérialisme en faveur de l'information et des arts. Ils donnent volontiers des biens matériels en échange de connaissances ou même de spectacles, considérant qu'ils sont du côté "gagnant" d'un marché si les gens sont prêts à prendre des biens matériels en échange d'informations précieuses. Ils ne donnent jamais d'informations en échange de biens matériels, mais seulement d'autres connaissances et ils demandent rarement des biens matériels dans les échanges.</p>
+<p>Les shisks sont si paranoïaques que l'on sait que différentes communautés de shisks s'affrontent pour des secrets. Les guerres ne sont pas menées pour des territoires ou des ressources mais pour des informations convoitées. En quelques occasions, lorsque des sages ou des diplomates shisks ont convaincu différents groupes de shisks de mettre de côté leurs différences pour collaborer, de grandes énigmes et de grands mystères de Golarion ont été résolus en quelques heures.</p>
+<p>Les vêtements des shisks sont amples et respirants, et souvent minimalistes pour ne pas s'accrocher à leurs plumes osseuses. En raison du mépris de leur société pour le matérialisme, les shisks vivent en grande harmonie avec la nature qui les entoure, ne prenant que ce dont ils ont besoin. Les shisks s'adonnent souvent à des passe-temps simples, comme les bains de soleil.</p>
+<h2>Alignement et religion</h2>
+<p>Se considérant comme faisant partie du monde naturel et généralement concentrés sur leurs propres occupations plutôt que sur la société, la plupart des shisks adoptent des alignements neutres. Certains shisks sont des mécènes de dieux depuis longtemps oubliés. Beaucoup de shisks vénèrent le dieu du soleil Chohar, un fait qui peut sembler étrange pour des gens qui vivent sous terre. La Foi Verte est très répandue parmi les shisks, mais lorsqu'ils cherchent des dieux personnels à vénérer, la plupart des shisks préfèrent les dieux de la connaissance et des secrets tels qu'Irez, Néthys ou Norgorber.</p>
+<h2>Noms</h2>
+<p>Les noms des shisks leur sont généralement accordés par leurs parents, bien que ces noms aient souvent une signification secrète connue uniquement de leur famille. Ils sont souvent composés de syllabes sifflantes, parfois ponctuées de voyelles aiguës.</p>
+<h3>Exemples de nom</h3>
+<p>Adomssha, Asjossa, Chishinsa, Dalissho, Lessia, Lishassha, Somissu, Quinshu</p>
