--- a/data/actions/kKKHwVUnroKuAnOt.htm
+++ b/data/actions/kKKHwVUnroKuAnOt.htm
@@ -1,6 +1,6 @@
 Name: Toxic Skin
-Nom: 
-État: aucune
+Nom: Peau toxique
+État: libre
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
@@ -9,3 +9,8 @@ Nom:
 <p>You exude a deadly toxin. The triggering creature takes [[/r 1d4 #poison]] poison damage (basic Fortitude save using your class DC or spell DC, whichever is higher). At 3rd level and every 2 levels thereafter, the damage increases by 1d4.</p>
 <p>[[/r ceil(@details.level.value/2)d6 #poison]]{Levelled} poison damage</p>
 ------ Description (fr) ------
+<p><strong>Fréquence</strong> une fois par heure</p>
+<p><strong>Déclencheur</strong> Une créature vous touche, en vous Saisissant, en réussissant à vous toucher avec une attaque à mains nues ou en utilisant un sort de contact contre vous.</p>
+<hr />
+<p>Vous exsuder une toxine mortelle. La créature déclencheuse subit [[/r 1d4 #poison]] dégâts de poison (jet de Vigueur basique en utilisant le plus élevé entre votre DD de classe ou votre DD de sort). Au niveau 3 et tous les niveaux impairs par la suite, les dégâts augmentent de 1d4.</p>
+<p>dégâts de poison [[/r ceil(@details.level.value/2)d4 #poison]]{selon le niveau} </p>
