--- a/data/actions/oAWNluJaMlaGysXA.htm
+++ b/data/actions/oAWNluJaMlaGysXA.htm
@@ -1,6 +1,6 @@
 Name: Barbed Quills
-Nom: 
-État: aucune
+Nom: Hampes barbelés
+État: libre
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -12,3 +12,11 @@ Nom:
 <hr />
 <p><em>Note: +1 bonus from Bristle is not added automatically</em></p>
 ------ Description (fr) ------
+<p><strong>Fréquence</strong> une fois par jour</p>
+<p><strong>Déclencheur</strong> Vous êtes touché par une Frappe à mains nues ou une frappe avec une arme au corps à corps sans allonge.</p>
+<hr />
+<p>Vos hampes se brisent dans la peau de votre attaquant. Vous infligez [[/r 1d8 #perforants]] dégâts perforants à la créature déclencheuse (jet de Réflexe basqieu contre le plus élevé entre votre DD de classe ou votre DD de sort). Sur un échec critique, la créature subit aussi [[/r 1d4 #saignement persistant]] dégâts de saignement persistant lorsque vos hampes se fichent dans sa peau. Au niveau 3 et chaque niveau impair par la suite, ces dégâts augmentes d'1d8 et les dégâts perforants persistants augmentent de 1.</p>
+<p>dégâts perforants [[/r ceil(@details.level.value/2)d8 #piercing]]{selon le niveau}</p>
+<p>dégâts de saignement persistants [[/r 1d4+ceil(@details.level.value/2)-1 #saignement persistant]]{selon le niveau}</p>
+<hr />
+<p><em>Note: le bonus de +1 lié à Hirsute n'est pas automatiquement ajouté</em></p>
