--- a/data/pathfinder-bestiary-3/324ZRtmDYulbw0CM.htm
+++ b/data/pathfinder-bestiary-3/324ZRtmDYulbw0CM.htm
@@ -1,6 +1,6 @@
 Name: Lifeleecher Brawler
-Nom: 
-État: aucune
+Nom: Taxeur de vie (Mortique)
+État: libre
 
 ------ Description (en) ------
 <p>Mortics are humanoids overwhelmed by negative energy who still cling to life, surviving as twisted amalgams of living and undead. Though they feel unnatural cravings and resemble corpses, mortics live, breathe, eat, sleep, and procreate. However, a mortic can suspend their living functions simply by holding their breath, becoming more like a true undead.</p>
@@ -10,3 +10,9 @@ Nom:
 <p>Lifeleechers are mortic orcs with gray flesh, sharp claws, and protruding tusks. Resilient and strong, they devour the vital essence of their enemies, which heals their wounds and shackles those souls to the lifeleecher.</p>
 <p>Many orcs believe lifeleechers are possessed by the spirits of fallen orc warriors too stubborn to die. Feared and revered, lifeleechers often rise to positions of power in their holds and battle on the front lines against the undead armies of the Whispering Tyrant.</p>
 ------ Description (fr) ------
+<p>Les Mortiques sont des humanoïdes submergés par l'énergie négative qui s'accrochent encore à la vie, survivant comme des amalgames tordus de vivants et de morts-vivants. Bien qu'ils ressentent des fringales contre nature et ressemblent à des cadavres, les Mortiques vivent, respirent, mangent, dorment et procréent. Cependant, un Mortique peut suspendre ses fonctions vivantes simplement en retenant sa respiration, devenant ainsi plus proche d'un véritable mort-vivant.</p> 
+</p>Les Mortiques sont en grande partie nouveaux sur Golarion, la plupart ayant été créés en masse lorsque le Tyran des Murmures a détruit des villes entières avec son Feu Radieux, une explosion magique alimentée par la collision d'énergie négative et positive. Parmi les cadavres de ces tragédies sont apparus des Mortiques, des survivants vivants pris pour des cadavres qui ont été laissés pour mort. Ils se sont retrouvés dans un état crépusculaire, ni pleinement vivants ni morts-vivants. Les polluants nécrotiques des Gravelands et de l'île de la Terreur continuent de créer des Mortiques, s'infiltrant dans les terres voisines par l'air, la terre et l'eau pour infecter la population. Bien que la plupart des vivants de ces terres craignent d'être transformés, certains pensent que devenir un Mortique est leur meilleure chance de survie face à l'envahissement des hordes de morts.</p> 
+<p>Les pouvoirs d'un Mortique diffèrent selon son ascendance, bien qu'ils aient quelques points communs. Lire ou entendre les textes sacrés leur donne des maux de tête, et ils éprouvent un grand malaise lorsqu'ils foulent un sol sacré. Pour ceux qui étaient religieux dans la vie, ces nouveaux changements peuvent être dévastateurs.</p>
+<hr />
+<p>Les Taxeurs de vie sont des orcs Mortiques à la chair grise, aux griffes acérées et aux défenses saillantes. Résistants et forts, ils dévorent l'essence vitale de leurs ennemis, ce qui guérit leurs blessures et enchaîne l' âme au Taxeur de vie.</p>
+<p>Beaucoup d'orcs croient que les Taxeurs de vie sont possédés par les esprits de guerriers orcs tombés au combat et trop têtus pour mourir. Redoutés et vénérés, les Taxeurs de vie s'élèvent souvent à des postes de pouvoir dans leurs clans et combattent en première ligne contre les armées de morts-vivants du Tyran qui Murmure.</p> 
