--- a/data/pathfinder-bestiary-3/DmQM0QTSPJ7YtpMg.htm
+++ b/data/pathfinder-bestiary-3/DmQM0QTSPJ7YtpMg.htm
@@ -1,6 +1,6 @@
 Name: Girtablilu Seer
-Nom: 
-État: aucune
+Nom: Voyant Girtablilu
+État: libre
 
 ------ Description (en) ------
 <p>Girtablilus are desert-dwelling guardians with the upper bodies of muscular humanoids and the lower bodies of massive scorpions. They are most often found defending ancient temples and religious artifacts with zealous fervor. Some believe they were created by a long-dead god millennia ago to act as guardians, but girtablilus consider the subject of their origin taboo and refuse to address the theory.</p>
@@ -10,3 +10,9 @@ Nom:
 <hr />
 <p>The highest position of authority in a girtablilu community is the group's religious leader. This sacred duty requires years of study, meditation, and dedication to awaken a mystical font of divine magic within the girtablilu. These seers ensure that every action taken by the community falls in line with even the most obscure dogma of their tradition, and they don't hesitate to turn their fury on members of their own community who violate their mandates.</p>
 ------ Description (fr) ------
+<p>Les Girtablilus sont des gardiens habitants du désert, avec le haut du corps en forme d'humanoïdes musclés et le bas du corps en forme de scorpions massifs. On les trouve le plus souvent en train de défendre les temples anciens et les artefacts religieux avec une ferveur zélée. Certains pensent qu'ils ont été créés par un dieu mort depuis longtemps, il y a des millénaires, pour servir de gardiens, mais les Girtablilus considèrent le sujet de leur origine comme tabou et refusent d'aborder cette théorie.</p>
+<p>Parce que les Girtablilus acceptent un large éventail de religions et de systèmes de croyance, certains étrangers pensent qu'ils vénèrent également leur propre panthéon ancien. Au lieu de cela, les Girtablilus vénèrent et protègent exclusivement les sites dédiés aux divinités considérées comme perdues pour la civilisation. De cette façon, ils agissent en tant que conservateurs de pratiques sacrées qui ont autrement été oubliées sous les sables mouvants du désert.</p>
+<p>Bien que les Girtablilus soient habitués aux explorateurs qui cherchent à entrer sur les sites qu'ils  défendent, ils peuvent accueillir ceux qui souhaitent sincèrement apprendre ou offrir leur révérence.  Quelques-uns partagent même fièrement leurs croyances avec d'autres, impatients d'avoir l'occasion de prêcher à quelqu'un de nouveau. Mais les Girtablilus ne montrent aucune pitié envers ceux qui tentent de profaner les sites et les objets de leur culte, ou envers ceux qui violeraient les principes de leur foi.</p>
+<p>Les Girtablilus sont des combattants émérites qui gardent des scorpions géants dressés comme animaux de compagnie, et ils restent inégalés lorsqu'il s'agit de se battre dans le désert. Ils ont besoin de relativement peu de nourriture ou d'eau, et ils comptent sur leur endurance pour survivre à leurs ennemis. Lorsque c'est nécessaire, ils peuvent traquer leur proie pendant des jours, voire des semaines, en coordonnant leur action avec celle de leur animal de compagnie pour la faire tourner en rond. Une fois épuisés, peu d'ennemis peuvent résister aux prouesses physiques d'un Girtablilu - ou à leur venin mortel.</p>
+<hr />
+<p>La plus haute position d'autorité dans une communauté Girtablilu est le chef religieux du groupe. Ce devoir sacré nécessite des années d'étude, de méditation et de dévouement pour éveiller une source mystique de magie divine au sein du Girtablilu. Ces voyants veillent à ce que chaque action entreprise par la communauté s'inscrive dans la lignée des dogmes les plus obscurs de leur tradition, et ils n'hésitent pas à retourner leur fureur contre les membres de leur propre communauté qui enfreignent leurs mandats.</p>
