--- a/data/pathfinder-bestiary-3/4vwMHy39IQyb7I7p.htm
+++ b/data/pathfinder-bestiary-3/4vwMHy39IQyb7I7p.htm
@@ -1,6 +1,6 @@
 Name: Incutilis
-Nom: 
-État: aucune
+Nom: Incutilis
+État: libre
 
 ------ Description (en) ------
 <p>Incutilises are intelligent, nautilus-like sea creatures that attack their victims' brains to take over their bodies, creating puppets to use for labor, combat, or their own malevolent amusement.</p>
@@ -8,3 +8,7 @@ Nom:
 <p>An incutilis makes excursions onto land specifically to use their iconic puppetmaster ability. They use their tentacles to crawl up onto shore or climb aboard a ship. An incutilis then drives their tendrils directly into the brain of a helpless living (or very recently dead) land creature, taking control of it through this neurological connection. They prefer to target humanoids and animals. This host-now called a puppet-rarely survives the experience.</p>
 <p>After the incutilis has taken full control, they can usually ride their puppet for as long as they wish. Often, they use the puppet to seek out other potential prey, battling other creatures until the wear and tear from repeated conflict renders the body useless.</p>
 ------ Description (fr) ------
+<p>Les incutilis sont des créatures marines intelligentes, ressemblant à des nautiles, qui s'attaquent au cerveau de leurs victimes pour prendre le contrôle de leur corps, créant ainsi des marionnettes qu'elles utilisent pour le travail, le combat ou leur propre divertissement malveillant.</p>
+<p>Un incutilis adulte est légèrement plus petit qu'une tête humaine adulte. Sa coquille porte un motif de stries cramoisies qui ressemblent aux crêtes et aux sillons d'un cerveau. Les  incutilis éclosent dans les profondeurs de la mer, où ils commencent par consommer des crustacés de fond et parfois même des baleines ou des requins, mais lorsqu'ils deviennent adultes, les incutilis ont instinctivement envie des tissus complexes du cerveau d'autres créatures - plus c'est complexe, mieux c'est.</p>
+<p>Un incutilis fait des excursions sur terre spécifiquement pour utiliser leur capacité emblématique de marionnettiste. Ils utilisent leurs tentacules pour ramper sur le rivage ou monter à bord d'un navire. Un incutilis enfonce ensuite ses vrilles directement dans le cerveau d'une créature terrestre vivante sans défense (ou morte très récemment), prenant le contrôle de celle-ci grâce à cette connexion neurologique. Ils préfèrent cibler les humanoïdes et les animaux. Cet hôte - que l'on appelle désormais une marionnette - survit rarement à l'expérience.</p>
+<p>Après que l'incutilis ait pris le contrôle total, ils peuvent généralement chevaucher leur marionnette aussi longtemps qu'ils le souhaitent. Souvent, ils utilisent la marionnette pour rechercher d'autres proies potentielles, affrontant d'autres créatures jusqu'à ce que l'usure des conflits répétés rende le corps inutile.</p>
