--- a/data/pathfinder-bestiary-3/4WMThCqvHV1aaBwa.htm
+++ b/data/pathfinder-bestiary-3/4WMThCqvHV1aaBwa.htm
@@ -1,8 +1,10 @@
 Name: Animated Colossus
-Nom: 
-État: aucune
+Nom: Colosse animé
+État: libre
 
 ------ Description (en) ------
 <p>Many animated objects have useful functions but become dangers when uncontrolled.</p>
 <p>Animating a 100-foot-tall statue is worth the cost for spellcasters guarding immense dungeons.</p>
 ------ Description (fr) ------
+<p>De nombreux objets animés ont des fonctions utiles mais deviennent des dangers lorsqu'ils ne sont pas contrôlés.</p>
+<p>Animer une statue de plus de 30 mètres de haut vaut le coup pour les lanceurs de sorts qui gardent d'immenses donjons.</p>
