--- a/data/pathfinder-bestiary-3/YsgpbtWVT3q0OLWv.htm
+++ b/data/pathfinder-bestiary-3/YsgpbtWVT3q0OLWv.htm
@@ -1,6 +1,6 @@
 Name: Empress Lava Worm
-Nom: 
-État: aucune
+Nom: Ver de lave empereur
+État: libre
 
 ------ Description (en) ------
 <p>These Darklands vermin produce corrosive, noxious slime and deliver agonizing bites, whether as a revolting, wriggling swarm of finger-length worms or a single massive, lurching beast. Among Darklands communities, most inhabitants regard bore worms much in the same way surface cultures speak of maggots or cockroaches-with general disdain and revulsion. Children consider catching a single bore worm and using it to torment others a rite of passage, albeit a dangerous one.</p>
@@ -10,3 +10,9 @@ Nom:
 <hr />
 <p>Dwelling in the deepest, hottest reaches of the Darklands, these bizarre creatures consume not living matter but minerals and rare earths. They're most often found near volcanoes or open magma and will swim through the lava in pursuit of a meal. Lava worms are immune to fire rather than to acid, and they substitute fire for acid in all of their attacks and abilities.</p>
 ------ Description (fr) ------
+<p>Cette vermine des Ténèbres produit une bave corrosive et nocive et inflige des morsures atroces, que ce soit sous la forme d'une révoltante nuée frétillante de vers de la longueur d'un doigt ou d'une seule bête massive et titubante. Dans les communautés des Ténèbres, la plupart des habitants considèrent les vers foreur de la même manière que les cultures de surface qui parlent des asticots ou des cafards - avec dédain et répulsion. Les enfants considèrent que le fait d'attraper un seul ver foreur et de l'utiliser pour tourmenter les autres est un rite de passage, rite bien dangereux.</p>
+<hr />
+</p> <p>Lorsqu'une zone manque de nourriture, les vers foreur d'une nuée deviennent de plus en plus agités et désespérés. Finalement, à un certain signal chimique, les vers commencent à se cannibaliser les uns les autres, s'entre-dévorant dans une frénésie trop horrible à voir. Un seul ver émerge victorieux de cette mêlée ; il devient rapidement plus grand et plus vorace jusqu'à atteindre une taille absolument éléphantesque.</p>
+</p>Ce ver foreur Empereur ne vit que brièvement, car il part à la recherche d'une nouvelle aire d'alimentation et mange tout sur son passage pour tenter de subvenir à ses besoins. Cependant, le métabolisme vorace du ver Empereur exige de son corps plus que ce qu'il peut physiquement soutenir, car il n'existe que comme un vaisseau pour la génération suivante. La plupart ne vivent que quelques jours, ou quelques semaines dans le meilleur des cas, voyageant et mangeant sans cesse avant de mourir - et, ce faisant, de donner naissance à de nouvelles nuées de vers foreurs.</p>
+<hr />
+<p>Vivant dans les zones les plus profondes et les plus chaudes des Darklands, ces créatures bizarres ne consomment pas de la matière vivante mais des minéraux et des terres rares. On les trouve le plus souvent près des volcans ou du magma ouvert et ils nagent dans la lave à la poursuite d'un repas. Les vers de lave sont immunisés contre le feu plutôt que contre l'acide, et ils substituent le feu à l'acide dans toutes leurs attaques et leurs capacités.</p>
