--- a/data/pathfinder-bestiary-3/5WAy9PYWu1PuQKXg.htm
+++ b/data/pathfinder-bestiary-3/5WAy9PYWu1PuQKXg.htm
@@ -1,9 +1,12 @@
 Name: Clacking Skull Swarm
-Nom: 
-État: aucune
+Nom: Nuée de crânes caquetant
+État: libre
 
 ------ Description (en) ------
 <p>A skull swarm is composed of reanimated masses of craniums and jawbones, forming a terrifying avalanche of undead fury. Most skull swarms are mindless, though some retain a vestige of wit, awareness, and even magical talents from life, culminating in a highly intelligent swarm mind.</p>
 <hr />
 <p>Roiling about in seething waves of bleached death, clacking skull swarms arise from the remains of dozens of beheaded humanoids. The horrible clattering of the skulls' onslaught drives their prey to distraction even while they try to flee in terror.</p>
 ------ Description (fr) ------
+<p>Une nuée de crânes est composé de masses réanimées de crânes et de mâchoires, formant une avalanche furieuse de morts-vivants terrifiants. La plupart des nuées de crânes sont dépourvus d'esprit, bien que certains conservent de leur vie un vestige d'esprit, de conscience et même de talents magiques, pour aboutir à un esprit d'essaim très intelligent.</p>
+<hr />
+<p>S'agitant dans des vagues bouillonnantes de morts-vivants blanchis par le temps, des nuées de crânes caquetants surgissent des restes de dizaines d'humanoïdes décapités. L'horrible cliquetis de l'assaut des crânes pousse leurs proies à la distraction alors même qu'elles tentent de s'enfuir de terreur.</p>
