--- a/data/pathfinder-bestiary-3/aX0zhmJGzpnwCwMr.htm
+++ b/data/pathfinder-bestiary-3/aX0zhmJGzpnwCwMr.htm
@@ -1,9 +1,12 @@
 Name: Feral Skull Swarm
-Nom: 
-État: aucune
+Nom: Nuée de crânes sauvages
+État: libre
 
 ------ Description (en) ------
 <p>A skull swarm is composed of reanimated masses of craniums and jawbones, forming a terrifying avalanche of undead fury. Most skull swarms are mindless, though some retain a vestige of wit, awareness, and even magical talents from life, culminating in a highly intelligent swarm mind.</p>
 <hr />
 <p>Some skull swarms are crafted from the heads of feral and dangerous beasts. These can include predatory cats, bears, dinosaurs, and the like, but just as often they're made from bulls, horses, apes, and other creatures that were gentler in life. In death, a feral skull swarm is bloodthirsty regardless of its origins, with a keen scent for living flesh. Even herbivore skulls diligently chew on the flesh of their swarm's victims.</p>
 ------ Description (fr) ------
+<p>Une nuée de crânes est composé de masses réanimées de crânes et de mâchoires, formant une avalanche furieuse de morts-vivants terrifiants. La plupart des nuées de crânes sont dépourvus d'esprit, bien que certains conservent de leur vie un vestige d'esprit, de conscience et même de talents magiques, pour aboutir à un esprit d'essaim très intelligent.</p>
+<hr />
+<p>Certaines nuées de crânes sont fabriqués à partir de têtes de bêtes sauvages et dangereuses. Il peut s'agir de chats prédateurs, d'ours, de dinosaures et autres, mais tout aussi souvent, ils sont fabriqués à partir de taureaux, de chevaux, de singes et d'autres créatures qui étaient plus douces de leur vivant. Dans la mort, une nuée de crânes sauvages est assoiffé de sang, quelles que soient ses origines, et a un goût prononcé pour la chair vivante. Même les crânes herbivores mâchonnent assidûment la chair des victimes de leur essaim.</p>
