--- a/data/pathfinder-bestiary-3/XnHmGsR7bQCHTMdA.htm
+++ b/data/pathfinder-bestiary-3/XnHmGsR7bQCHTMdA.htm
@@ -1,6 +1,6 @@
 Name: Empress Necril Worm
-Nom: 
-État: aucune
+Nom: Ver empereur nécromantique
+État: libre
 
 ------ Description (en) ------
 <p>These Darklands vermin produce corrosive, noxious slime and deliver agonizing bites, whether as a revolting, wriggling swarm of finger-length worms or a single massive, lurching beast. Among Darklands communities, most inhabitants regard bore worms much in the same way surface cultures speak of maggots or cockroaches-with general disdain and revulsion. Children consider catching a single bore worm and using it to torment others a rite of passage, albeit a dangerous one.</p>
@@ -10,3 +10,9 @@ Nom:
 <hr />
 <p>An undead sorcerer in the ghoul-run Darklands city of Nemret Noktoria developed necral worms about 60 years ago by filling an empress bore worm's abandoned exoskeleton with a unique alchemical paste. These undead bore worms radiate the very energies of death, making them surprisingly sophisticated magical batteries. Less pleasant entities often use them as magical tools. Necral worms have the undead trait and negative healing. They substitute negative damage for acid damage in all of their attacks and abilities, and they gain a weakness to positive damage in place of their weakness to water.</p>
 ------ Description (fr) ------
+<p>Cette vermine des Ténèbres produit une bave corrosive et nocive et inflige des morsures atroces, que ce soit sous la forme d'une révoltante nuée frétillante de vers de la longueur d'un doigt ou d'une seule bête massive et titubante. Dans les communautés des Ténèbres, la plupart des habitants considèrent les vers foreur de la même manière que les cultures de surface qui parlent des asticots ou des cafards - avec dédain et répulsion. Les enfants considèrent que le fait d'attraper un seul ver foreur et de l'utiliser pour tourmenter les autres est un rite de passage, rite bien dangereux.</p>
+<hr />
+<p>Lorsqu'une zone manque de nourriture, les vers foreur d'une nuée deviennent de plus en plus agités et désespérés. Finalement, à un certain signal chimique, les vers commencent à se cannibaliser les uns les autres, s'entre-dévorant dans une frénésie trop horrible à voir. Un seul ver émerge victorieux de cette mêlée ; il devient rapidement plus grand et plus vorace jusqu'à atteindre une taille absolument éléphantesque.</p>
+</p>Ce ver foreur Empereur ne vit que brièvement, car il part à la recherche d'une nouvelle aire d'alimentation et mange tout sur son passage pour tenter de subvenir à ses besoins. Cependant, le métabolisme vorace du ver Empereur exige de son corps plus que ce qu'il peut physiquement soutenir, car il n'existe que comme un vaisseau pour la génération suivante. La plupart ne vivent que quelques jours, ou quelques semaines dans le meilleur des cas, voyageant et mangeant sans cesse avant de mourir - et, ce faisant, de donner naissance à de nouvelles nuées de vers foreurs.</p>
+<hr />
+<p>Un sorcier mort-vivant de la ville de Nemret Noktoria, située dans les Darklands et dirigée par des goules, a mis au point des vers nécromantiques il y a environ 60 ans en remplissant l'exosquelette abandonné d'un ver foreur impérial d'une pâte alchimique unique. Ces vers morts-vivants irradient les énergies mêmes de la mort, ce qui en fait des batteries magiques étonnamment sophistiquées. Des entités moins agréables les utilisent souvent comme outils magiques. Les vers nécromantiques ont le trait de mort-vivant et la guérison négative. Ils remplacent les dégâts acides par des dégâts négatifs dans toutes leurs attaques et capacités, et ils gagnent une faiblesse aux dégâts positifs à la place de leur faiblesse à l'eau.</p>
