--- a/data/pathfinder-bestiary-3/aqvMwn6885CJEmCO.htm
+++ b/data/pathfinder-bestiary-3/aqvMwn6885CJEmCO.htm
@@ -1,6 +1,6 @@
 Name: Garuda
-Nom: 
-État: aucune
+Nom: Garuda
+État: libre
 
 ------ Description (en) ------
 <p>Garudas are noble, birdlike beings descended from the gods. They were born under the cerulean skies of the Outer Plane of Elysium but have since spread to the Material Plane, and it is here that they primarily reside. On Golarion,the largest garuda populations live in the rugged hills and mountains of Vudra, though some have spread to the Impossible Kingdom of Jalmeray and even to the eastern mountains of Garund.</p>
@@ -8,3 +8,7 @@ Nom:
 <p>Though they hold most living creatures in high regard, garudas loathe ophidian creatures-nagas in particular. Rarely do they come into contact without fighting, and a garuda will go out of their way to hunt down a naga if they hear even the tiniest hint of a rumor suggesting the presence of one.</p>
 <p>A garuda's feathering and coloration range widely depending on the terrain they favor. Garudas in temperate woodlands might resemble jays or falcons, while tropical garudas sport bright plumage.</p>
 ------ Description (fr) ------
+<p>Les Garudas sont des êtres nobles, semblables à des oiseaux, qui descendent des dieux. Ils sont nés sous les cieux céruléens du Plan Extérieur d'Elysium mais se sont depuis répandus dans le Plan Matériel, et c'est là qu'ils résident principalement. Sur Golarion,les plus grandes populations de Garudas vivent dans les collines et les montagnes accidentées de Vudra, bien que certains se soient répandus dans le royaume Impossible de Jalmeray et même dans les montagnes orientales de Garund.</p> 
+<p>Les Garudas se perchent généralement dans des aires isolées mais passent une grande partie de leur temps à planer au gré du vent. De nombreux Garudas sont nomades ou migrateurs, aspirant à voyager et à planer au-dessus de nouveaux paysages. Bien qu'ils restent détachés des sociétés humanoïdes, ils sont impétueux et galants, servant fréquemment de protecteurs aux communautés proches des falaises et des pics où ils se perchent. Certains Garudas combinent leur envie d'errer et leur nature généreuse en servant de messagers et d'émissaires entre des colonies éloignées, bien que la plupart de ceux qui se lancent dans ce travail l'abandonnent après quelques années lorsque le même terrain devient ennuyeux. Les Garudas errants ne sont pas moins compatissants, et plus d'un conte raconte qu'un Garuda est venu en aide à un voyageur égaré ou a transporté une âme en danger en lieu sûr.</p>
+<p>Bien qu'ils tiennent en haute estime la plupart des créatures vivantes, les Garudas détestent les créatures ophidiennes - les nagas en particulier. Il est rare qu'ils entrent en contact sans se battre, et un Garuda fera des pieds et des mains pour traquer un naga s'il entend le moindre soupçon de rumeur suggérant sa présence.</p> 
+<p>Le plumage et la coloration d'un Garuda varient considérablement en fonction du terrain qu'il privilégie. Les Garudas des forêts tempérées peuvent ressembler à des geais ou des faucons, tandis que les Garudas tropicaux arborent un plumage éclatant.</p>
