--- a/data/pathfinder-bestiary-3/AxfH7V8A38VVugYo.htm
+++ b/data/pathfinder-bestiary-3/AxfH7V8A38VVugYo.htm
@@ -1,9 +1,13 @@
 Name: Lampad
-Nom: 
-État: aucune
+Nom: Lampade (Nymphe)
+État: libre
 
 ------ Description (en) ------
 <p>Nymphs are fey guardians of nature possessed of great beauty and forms that&nbsp;meld breathtaking humanoid features with the natural elements they guard.&nbsp;Nymph queens are powerful nymphs who rule over and protect a much greater&nbsp;territory of untouched wilderness. For instance, a lampad might guard a&nbsp;beautiful underground cavern, but a lampad queen might call an entire system&nbsp;of caves their domain.</p>
 <hr />
 <p>Lampads protect dark, hidden places underground. Not only do they defend subterranean caverns from threats, but they also safeguard well-meaning innocents from the dangers that lurk below the surface. Lampads are so-named for the wisps of magic light they often carry, guiding the lost to safety while luring threats to their doom. Lampads' mercurial nature makes their reactions difficult to predict, though they rarely demonstrate outright malice without sufficient provocation.</p>
 ------ Description (fr) ------
+<p>Les Nymphes sont des gardiens féeriques de la nature possédant une grande beauté et des formes qui mêlent des caractéristiques humanoïdes à couper le souffle aux éléments naturels qu'elles gardent.</p>
+<p>Les reines nymphes sont des nymphes puissantes qui règnent sur et protègent un territoire beaucoup plus grand de nature sauvage intacte. Par exemple, une Lampade peut garder une belle caverne souterraine, mais une reine Lampade peut appeler un système entier de cavernes son domaine.</p>
+<hr />
+ <p>Les Lampades protègent les endroits sombres et cachés sous terre. Non seulement elles défendent les cavernes souterraines contre les menaces, mais elles préservent également les innocents bien intentionnés des dangers qui se cachent sous la surface. Les Lampades sont ainsi nommés en raison des volutes de lumière magique qu'ils transportent souvent, guidant les personnes perdues vers la sécurité et attirant les menaces vers leur perte. La nature mercuriale des Lampades rend leurs réactions difficiles à prévoir, bien qu'ils fassent rarement preuve d'une franche méchanceté sans une provocation suffisante.</p>
