--- a/data/pathfinder-bestiary-3/aZBp1m5C9nXRgxHA.htm
+++ b/data/pathfinder-bestiary-3/aZBp1m5C9nXRgxHA.htm
@@ -1,6 +1,6 @@
 Name: Trilobite
-Nom: 
-État: aucune
+Nom: Trilobite
+État: libre
 
 ------ Description (en) ------
 <p>Often overlooked as little more than water-dwelling pests, trilobites are a varied species of arthropods found throughout the seas and oceans of Golarion. So ancient and widespread are these critters that trilobite fossils are as commonly found as living specimens.&nbsp;&nbsp;</p>
@@ -8,3 +8,7 @@ Nom:
 <p>Trilobites have segmented, chitinous bodies that armor them but provide enough flexibility for them to roll up and protect their vulnerable undersides from attack. Instead of jaws, trilobites have specialized structures called gnathobases at the base of some of their legs. These serrated and jagged structures grind and masticate any prey the trilobite latches onto, enabling the creatures to feed on anything from hard-shelled clams to soft-bodied creatures. While not particularly fast on their own, they can employ scuttling bursts of speed to dart into ocean silt or seaweed beds to escape predators.</p>
 <p>Oceanic wizards of many types employ trilobites as familiars. In addition to trilobites' durability, their ubiquity means they make capable spies for their masters as they travel unnoticed throughout the depths.</p>
 ------ Description (fr) ------
+<p>Souvent négligés comme n'étant guère plus que des nuisibles vivant dans l'eau, les trilobites sont une espèce variée d'arthropodes que l'on trouve partout dans les mers et les océans de Golarion. Ces bestioles sont si anciennes et si répandues que l'on trouve aussi souvent des fossiles de trilobites que des spécimens vivants.</p>.
+<hr />
+<p>Les trilobites ont des corps segmentés et chitineux qui les blindent mais leur offrent suffisamment de souplesse pour qu'ils puissent s'enrouler et protéger leurs parties inférieures vulnérables des attaques. Au lieu de mâchoires, les trilobites possèdent des structures spécialisées appelées gnathobases à la base de certaines de leurs pattes. Ces structures dentelées et déchiquetées broient et mastiquent toute proie sur laquelle le trilobite s'accroche, permettant aux créatures de se nourrir de tout, des palourdes à coquille dure aux créatures à corps mou. Bien qu'ils ne soient pas particulièrement rapides par eux-mêmes, ils peuvent employer des rafales de vitesse pour s'élancer dans la vase océanique ou les lits d'algues afin d'échapper à leurs prédateurs.</p>
+<p>Les sorciers océaniques de plusieurs types emploient des trilobites comme familiers. En plus de la durabilité des trilobites, leur omniprésence signifie qu'ils font des espions compétents pour leurs maîtres lorsqu'ils voyagent inaperçus dans les profondeurs.</p> 
